2004-08-27  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgstparse.c: Improved error handling. 

2004-08-05  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgst.c: Fixed bad comments (for the constants).
	* src/rbgstcaps.c: Added missing Returns statements in the 
	  comments.
	* src/rbgstscheduler.c: Fixed a bug when creating the GEnum,
	  reported by Pascal Terjan.

2004-08-03  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgstelement.c (#seek, #locked_state?, #set_locked_state,
	  #sync_state_with_parent, #managing_bin, #no_more_pads):
	  Added.

2004-08-02  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgstelement.c (#get_static_pad, #get_request_pad, 
	  #release_request_pad, #get_compatible_pad, #get_pad_template,
	  #pad_templates, #each_pad_template, #get_compatible_pad_template):
	  Added.

2004-08-01  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgst.c: Initializes Gst::Scheduler.
	* src/rbgst.h: Added helper macros for Gst::Scheduler.
	* src/rbgstelement.c (#scheduler, #set_scheduler): Added.
	* src/rbgstscheduler.c: Added.

2004-07-31  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgst.c: Initializes Gst::Index and Gst::IndexEntry.
	* src/rbgst.h: Added helper macros for Gst::Index and Gst::IndexEntry.
	* src/rbgstelement.c (#index, #set_index): Added.
	* src/rbgstindex.c, src/rbgstindexentry.c: Added. 

2004-07-28  Laurent Sansonetti  <lrz@gnome.org>

	* src/rbgst.c: Initializes Gst::Structure.
	* src/rbgst.h: Added helper macros for Gst::Structure and fixed
	  the declaration of the Gst::ClockEntry's GType function. 
	* src/rbgstcaps.c (#initialize, #set_any, #append, #append_structure, 
	  #size, #get_structure, #set_simple, #any?, #empty?, #simple?, 
	  #equal?, #equal_fixed?, #always_compatible?, #subset?, #intersect, 
	  #union, #normalize, #simplify, #simplify!, #replace!, #to_string, 
	  #subtract): Added. 
	* src/rbgstclock.c (#event_time, #get_event_time_delay, #next_id):
	  Added.
	* src/rbgstclockentry.c: Indentation clean.