@@ -2,43 +2,26 @@
 extconf.rb for Ruby/GStreamer extention library
 =end
 
-$LOAD_PATH.unshift File.expand_path(File.dirname(__FILE__) + '/../glib/src/lib')
+PACKAGE_NAME = "gst"
+
+TOPDIR = File.expand_path(File.dirname(__FILE__) + '/..')
+MKMF_GNOME2_DIR = TOPDIR + '/glib/src/lib'
+SRCDIR = TOPDIR + '/gstreamer/src'
+
+$LOAD_PATH.unshift MKMF_GNOME2_DIR
+
 require 'mkmf-gnome2'
 
-pkgname   = 'gstreamer-0.8'
 
-PKGConfig.have_package(pkgname) or exit 1
+PKGConfig.have_package('gstreamer-0.8') or exit 1
 
-check_win32
+setup_win32(PACKAGE_NAME)
 
-top = File.expand_path(File.dirname(__FILE__) + '/..') # XXX
-$CFLAGS += " " + ['glib/src'].map{|d|
-  "-I" + File.join(top, d)
-}.join(" ")
-
-srcdir = File.dirname($0) == "." ? "." :
-  File.expand_path(File.dirname($0) + "/src")
+add_depend_package("glib2", "glib/src", TOPDIR)
 
 if have_library("gstmedia-info-0.8", "gst_media_info_read")
-	$CFLAGS += " -DHAVE_MEDIA_INFO"
+  $CFLAGS += " -DHAVE_MEDIA_INFO"
 end
 
-if /cygwin|mingw/ =~ RUBY_PLATFORM
-  top = "../.."
-  [
-    ["glib/src", "ruby-glib2"],
-  ].each{|d,l|
-    $LDFLAGS << " -L#{top}/#{d}"
-    $libs << " -l#{l}"
-  }
-end
-
-Dir.mkdir('src') unless File.exist? 'src'
-Dir.chdir "src"
-begin
-  create_makefile("gst", srcdir)
-ensure
-  Dir.chdir('..')
-end
-
+create_makefile_at_srcdir(PACKAGE_NAME, SRCDIR, "-DRUBY_GST_COMPILATION")
 create_top_makefile
